--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,9 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish ./santacrab2.github.io.csproj -c:Release -p:GHPages=true -o dist/Web --nologo
 
+      
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           BRANCH: gh-pages
-          FOLDER: ./
+          FOLDER: dist/Web/wwwroot
