have rotom react to mouse

--- a/santacrab2.github.io.csproj
+++ b/santacrab2.github.io.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="PublishSPAforGitHubPages.Build" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="scripts\" />
+  </ItemGroup>
+
 </Project>
